[workspace]
resolver = "2"
members = ["client", "server", "examples/*", "protocol"]

[workspace.dependencies]
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
tonic-build = "0.11"
