[package]
name = "simple-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiant-protocol = { path = "../../radiant-protocol" }
radiant-client = { path = "../../radiant-client" }
bincode.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
